--- a/testClient/chat.ejs
+++ b/testClient/chat.ejs
@@ -63,6 +63,9 @@
         <script>
             $(() => {
                 const socket = io();
+                socket.on('start round', () => {
+                    console.log('start round!');
+                });
             });
         </script>
     </body>
